--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </nav>
     <div class="container">
         <h1>Bine ați venit!</h1><p>Acest site prezintă componentele hardware ale unui calculator.</p>
+        <img src='poster.png'>
     </div>
 </body>
 </html>
