--- a/galerie.html
+++ b/galerie.html
@@ -15,7 +15,7 @@
         <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
-        <h1>Galerie de imagini</h1><img src='procesor.png'><img src='placa.jfif'><img src='memorie.jfif'><img src='video.jfif'><img src='ssd.jfif'><img src='sursa.jfif'><img src='carcasa.jfif'><img src='cooler.jfif'><img src='unitati.jfif'><img src='extensie.jfif'><img src='periferice.jfif'>
+        <h1>Galerie de imagini</h1><img src='poster.png'><img src='procesor.png'><img src='placa.jfif'><img src='memorie.jfif'><img src='video.jfif'><img src='ssd.jfif'><img src='sursa.jfif'><img src='carcasa.jfif'><img src='cooler.jfif'><img src='unitati.jfif'><img src='extensie.jfif'><img src='periferice.jfif'>
     </div>
 </body>
 </html>
