--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
-        <h1>Bine ați venit!</h1><p>Acest site prezintă componentele hardware ale unui calculator.</p>
+        <h1>Bine ați venit!</h1><p>Acest site prezintă componentele hardware ale unui calculator.<img src='poster.png'></p>
         <img src='poster.png'>
     </div>
 </body>
